# phifit

./: .gitignore  .gitmodules  CMakeLists.txt  Lemmon_Jacobsen_HFC.json  coeffs.py  deap_optimize.py  eval_solns.py  fit0.json  fitter_py.py  gen_CP_json.py  run_py.py
data/: data_schema.json
data/ammonia-water/: Harms_deconstruction.py  PTXY_Smolen_deconstruction.py  PTcrit_Rivzi.py  PTcrit_Sakabe.py  PTcrit_Sassen.py  PVT_Harms_deconstruction.py  PVT_Muromachi_deconstruction.py  ammonia-water.bib
include/phifit/: data_generation.h  data_structures.h  departure_function.h  fitter.h
src/: data_generation.cpp  departure_function.cpp  fitter.cpp  main.cxx
test/: run_tests.cpp  tests.cpp
